# C-Unit-Test

./: CMakeLists.txt
src/: main.cpp~  my_class.cpp  my_class.hpp
tests/: my_test.cpp  my_test.cpp~
